@@ -50,6 +50,9 @@ class SipSend:
         self.ppi = ''
         self.pai = ''
         self.header = ''
+        self.nocontact = 0
+
+        self.withcontact = 1
 
         self.c = Color()
 
@@ -57,6 +60,9 @@ class SipSend:
         supported_protos = ['UDP', 'TCP', 'TLS']
         supported_methods = ['REGISTER', 'SUBSCRIBE', 'NOTIFY', 'PUBLISH', 'MESSAGE', 'INVITE',
                              'OPTIONS', 'ACK', 'CANCEL', 'BYE', 'PRACK', 'INFO', 'REFER', 'UPDATE']
+
+        if self.nocontact == 1:
+            self.withcontact = 0
 
         self.method = self.method.upper()
         self.proto = self.proto.upper()
@@ -231,7 +237,7 @@ class SipSend:
                 self.from_user = self.to_user
 
         msg = create_message(self.method, self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain, self.to_user, self.to_name, self.to_domain, self.proto,
-                             self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, self.to_tag, self.digest, 1, '', self.sdp, '', self.route, self.ppi, self.pai, self.header)
+                             self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, self.to_tag, self.digest, 1, '', self.sdp, '', self.route, self.ppi, self.pai, self.header, self.withcontact)
 
         try:
             sock.settimeout(5)
@@ -288,7 +294,7 @@ class SipSend:
                 # send ACK
                 print(self.c.BWHITE + '[+] Request ACK')
                 msg = create_message('ACK', self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain,
-                                     self.to_user, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, totag, '', 1, '', 0, via, self.route, '', '', self.header)
+                                     self.to_user, self.to_name, self.to_domain, self.proto, self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, totag, '', 1, '', 0, via, self.route, '', '', self.header, self.withcontact)
 
                 print(self.c.YELLOW + msg)
 
@@ -334,7 +340,7 @@ class SipSend:
                     self.cseq = str(int(self.cseq) + 1)
 
                     msg = create_message(self.method, self.localip, self.contact_domain, self.from_user, self.from_name, self.from_domain, self.to_user, self.to_name, self.to_domain, self.proto,
-                                         self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, self.to_tag, digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai, self.header)
+                                         self.domain, self.user_agent, lport, self.branch, self.callid, self.from_tag, self.cseq, self.to_tag, digest, auth_type, '', self.sdp, via, self.route, self.ppi, self.pai, self.header, self.withcontact)
 
                     try:
                         if self.proto == 'TLS':
